Fix scrolling on firefox browser

--- a/css/home.css
+++ b/css/home.css
@@ -144,9 +144,8 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 77%;
+  height: 100%;
   margin-bottom: 50px;
-  overflow-y: hidden;
 }
 
 .footer img {
@@ -418,8 +417,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 80%;
+    height: 78%;
     margin-bottom: 50px;
+    overflow-y: hidden;
   }
 
   .talks .more {
